--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
+    "axios": "^0.18.0",
     "express": "^4.15.2",
-    "next": "^6.1.1",
+    "isomorphic-unfetch": "^3.0.0",
+    "next": "^7.0.2",
+    "next-images": "^1.0.4",
+    "node-sass": "^4.11.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
   }
